# paper-download-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  TESTING.md  TEST_MCP.md  pyproject.toml  test_metadata.py
.github/workflows/: test.yml
openspec/: project.md
openspec/changes/archive/implement-mcp-server-2024-12-02/: design.md  proposal.md
openspec/changes/archive/implement-mcp-server-2024-12-02/specs/paper-download-tools/: spec.md
openspec/changes/implement-mcp-server/: proposal.md  tasks.md
src/paper_download_mcp/: formatters.py  models.py  server.py
src/paper_download_mcp/scihub_core/: __init__.py  client.py  stealth_utils.py
src/paper_download_mcp/scihub_core/config/: mirrors.py  settings.py  user_config.py
src/paper_download_mcp/scihub_core/core/: downloader.py  mirror_manager.py  source_manager.py  year_detector.py
src/paper_download_mcp/scihub_core/network/: proxy.py
src/paper_download_mcp/scihub_core/sources/: base.py  openalex_source.py  scihub_source.py  semantic_scholar_source.py  unpaywall_source.py
src/paper_download_mcp/scihub_core/utils/: retry.py
src/paper_download_mcp/tools/: __init__.py  download.py  metadata.py
tests/: test_metadata.py  test_tools.py
