[project]
name = "paper-download-mcp"
version = "0.1.0"
description = "MCP server for downloading academic papers from multiple sources"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Oxidane", email = "1317078257maroon@gmail.com" }
]
keywords = ["mcp", "academic-papers", "sci-hub", "unpaywall", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/oxidane-universe/paper-download-mcp"
Documentation = "https://github.com/oxidane-universe/paper-download-mcp#readme"
Repository = "https://github.com/oxidane-universe/paper-download-mcp"
Issues = "https://github.com/oxidane-universe/paper-download-mcp/issues"
Changelog = "https://github.com/oxidane-universe/paper-download-mcp/blob/main/CHANGELOG.md"

dependencies = [
    "mcp[cli]>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
paper-download-mcp = "paper_download_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_download_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
